# where-are-we-barista

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/: copilot-instructions.md
cpp-core/: CMakeLists.txt  README.md
cpp-core/data/: control-radio-altimeter.nmea  dem-sample.json
cpp-core/src/: height_map.cpp  height_map.hpp  main.cpp  matcher.cpp  matcher.hpp  nmea.cpp  nmea.hpp  profile.cpp  profile.hpp  scoring.cpp  scoring.hpp
cpp-core/tests/: test_core.cpp
docs/: checkpoint_external_nmea_result.md  expert_call_notes.md  final_demo_script.md  onboard_integration.md  project_state_for_review.md
docs/ai/: README.md  repository-knowledge-base.json
examples/: README.md  px4-derived-radio-altimeter.nmea  route_1.txt  vanavara-success-radio-altimeter.meta.json  vanavara-success-radio-altimeter.nmea
rust-core/: Cargo.toml  README.md
rust-core/src/: dem.rs  lib.rs  main.rs  matcher.rs  nmea.rs  profile.rs  scoring.rs
rust-core/tools/: export_dem_from_ts.mjs
scripts/: analyze-nmea.mjs  build.mjs  dev.mjs  generate-control-nmea.mjs  generate-dem-sample.mjs  generate-px4-nmea-demo.mjs  import-local-dem.mjs  test.mjs
src/: App.tsx  FlightPreview3D.tsx  checkpoint3.ts  copernicusDemSample.ts  nmeaRadioAltimeter.ts  node-shims.d.ts  smoke.test.ts  styles.css  terrainMatcher.ts
